# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- **Notificações!** Adicionado o sistema de notificações. As notificações são usadas para avisar atualizações de sua conta. As notificações podem ser lidas com o comando `/notificações`. O comando `/cooldowns` também avisa sobre notificações não lidas. As notificacões não lidas podem ser apagadas após 30 dias.

### Changed

- Peso paras plantações! Agora as plantações da `/fazendinha` usam peso por kilos, ao invés de apenas quantidade de plantas.
- Atualizado sistema da feira para permitir venda e compra de itens por kilo.

### Fixed

- Corrigido erro do `/poker` dos botões não funcionarem após um usuário não fazer sua jogada.

## [5.14.2] - 2024-04-22

### Added

- Adicionada a badge _Quatro anos com a Menhera_!

## [5.14.1] - 2024-04-21

### Added

- Adicionado o link para as versões anteriores. Sugerido por @mareys.
- Agora é possível ver os `cooldowns` de outros usuários.
- O `/cooldowns` mostra os estados de suas plantações. Sugerido por @rukasu_888.

### Removed

- Os emojis de usuários sem título foi removido dos tops.

## [5.14.0] - 2024-04-14

### Added

- Novo tema de perfil `Website` - Criado por @maycon.orp.
- Novo tema de perfil `Memórias...` - Criado por @rukasu_888.
- Novo tema de perfil `Congelado` - Criado por @jhonny_dy.

## [5.13.6] - 2024-04-11

### Fixed

- Corrigido o problema da compra de um campo da fazendinha não o liberar.

## [5.13.5] - 2024-03-24

### Fixed

- Corrigido um problema onde o `/itens` não funcionava usando a Menhera em Português quando um usuário possuia todos itens em seu inventário, sem ativar nenhum.

## [5.13.4] - 2024-03-20

### Fixed

- Corrigido o problema de criar cores com nomes de menos de 2 caracteres.
