@@ -585,8 +585,8 @@
     "title": "⌛ | {{user}}'s Resources",
     "no-cooldown": "{{user}} can already do that!",
     "hunt": "Hunt",
-    "vote": "Vote for Me",
-    "click-to-vote": "Click to Vote",
+    "vote": "Vote for me",
+    "click-to-vote": "Vote now",
     "read-notifications": "Read notifications",
     "no-user": "This user does not use my commands :(",
     "field": "Field {{field}}",
@@ -596,7 +596,11 @@
       "MATURE": "Can be harvested up to**<t:{{unix}}:T>** | **<t:{{unix}}:R>**",
       "ROTTEN": "Rotted in **<t:{{unix}}:T>** | **<t:{{unix}}:R>**"
     },
-    "time": "**<t:{{unix}}:T>** | **<t:{{unix}}:R>**"
+    "time": "**<t:{{unix}}:T>** | **<t:{{unix}}:R>**",
+    "unread-notifications": "New notification",
+    "check-your-notifications": "",
+    "check-your-notifications-one": "You have **{{count}}** unread notification! Use {{command}} to read it",
+    "check-your-notifications-other": "You have **{{count}}** unread notifications! Use {{command}} to read them"
   },
   "trisal": {
     "title": "❤️ Polyamory ❤️",
@@ -1168,6 +1172,15 @@
     "title": "{{user}}'s Titles",
     "not-your-title": "You need to have the title you want to equip",
     "unknown-title": "This title does not exist!",
-    "success": "O teu título foi alterado com sucesso!"
+    "success": "Your title has been changed successfully!"
+  },
+  "notificações": {
+    "no-unread-notificaions": "You don't have any new notifications. Check back later ;)",
+    "your-notifications": "Your notifications",
+    "mark-as-read": "",
+    "mark-as-read-one": "Mark as read",
+    "mark-as-read-other": "Mark all as read",
+    "cant-clear": "You have new notifications. Use the command again to mark all as read.",
+    "all-done": "Feitoria! Your notifications have been marked as read!"
   }
 }
