@@ -9,16 +9,18 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ### Added
 
-- **Notificações!** Adicionado o sistema de notificações. As notificações são usadas para avisar atualizações de sua conta. As notificações podem ser lidas com o comando `/notificações`. O comando `/cooldowns` também avisa sobre notificações não lidas. As notificacões não lidas podem ser apagadas após 30 dias.
+- **Notificações!** Adicionado o sistema de notificações. As notificações são usadas para avisar atualizações de sua conta. As notificações podem ser lidas com o comando `/notificações`. As notificacões não lidas devem sumir após 30 dias.
+- Peso paras plantações! Agora as plantações da `/fazendinha` usam peso por kilos, ao invés de apenas quantidade de plantas. O peso de uma plantação é semi aleatório, e varia de acordo com a estação em que a semente foi plantada.
+- O comando `/cooldowns` informa sobre notificações não lidas.
 
 ### Changed
 
-- Peso paras plantações! Agora as plantações da `/fazendinha` usam peso por kilos, ao invés de apenas quantidade de plantas.
 - Atualizado sistema da feira para permitir venda e compra de itens por kilo.
 
 ### Fixed
 
 - Corrigido erro do `/poker` dos botões não funcionarem após um usuário não fazer sua jogada.
+- Corrigida a mensagem de sucesso para alteração de títulos em inglês.
 
 ## [5.14.2] - 2024-04-22
 
